# luaopus

./: CMakeLists.txt  Makefile  README.md
csrc/: luaopus.c  luaopus.h  luaopus_decoder.c  luaopus_defines.c  luaopus_encoder.c  luaopus_internal.c  luaopus_internal.h
rockspec/: luaopus-dev-1.rockspec  luaopus-template.rockspec
